--- a/Ahmad_Zarzar_Random_forest.ipynb
+++ b/Ahmad_Zarzar_Random_forest.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,16 +26,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_df = pd.read_csv(\"/Users/ahmadzarzar/Downloads/WineQT.csv\")"
+    "data_df = pd.read_csv(\"/Users/ahmadzarzar/Downloads/csv_hämtade_filer/WineQT.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
        "[1143 rows x 13 columns]"
       ]
      },
-     "execution_count": 318,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
        "(1143, 13)"
       ]
      },
-     "execution_count": 319,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +586,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 324,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
        "       [ 0,  0,  0,  0,  0]])"
       ]
      },
-     "execution_count": 326,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
