--- a/Ahmad_Zarzar_Random_forest.ipynb
+++ b/Ahmad_Zarzar_Random_forest.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,13 +20,14 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.metrics import confusion_matrix,plot_confusion_matrix\n",
+    "from sklearn.metrics import confusion_matrix,plot_confusion_matrix,accuracy_score\n",
+    "from collections import Counter\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +300,7 @@
        "[1143 rows x 13 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +329,7 @@
        "(1143, 13)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +587,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -611,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +661,7 @@
        "       [ 0,  0,  0,  0,  0]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +705,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " Varför? för att värden som vi fick genom confusion_matrix på dessa klasser den visar oss genom att vi tiitar på predicted label dvs x axeln på klass 5 så den har förta värde 31 samtidigt kolar vi på y axeln så ser vi att 31 ligger på klass 6 och och det felaktig därför har modullen problem med de klasserna att kalssificera och så kan vi kolla på resten av värden som är kvar."
+    " Varför? för att värden som vi fick genom confusion_matrix på dessa klasser den visar oss genom att vi tiitar på predicted label dvs x axeln på klass 5 så den har första värde 31 samtidigt kolar vi på y axeln så ser vi att 31 ligger på klass 6 och och det felaktig därför har modullen problem med de klasserna att kalssificera och så kan vi kolla på resten av värden som är kvar."
    ]
   },
   {
@@ -717,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,17 +747,29 @@
     "                ['total sulfur dioxide','density','pH'],\n",
     "                ['sulphates','alcohol']]\n",
     "\n",
+    "lisat_socr=[]\n",
     "\n",
-    "for i in attribut_lista:                \n",
+    "\n",
+    "for i in attribut_lista:\n",
+    "\n",
     "    diction_tree= DecisionTreeClassifier(random_state=42)\n",
-    "\n",
     "    träd=diction_tree.fit(x_train[i],y_train)\n",
-    "\n",
     "    predi=träd.predict(x_test[i])\n",
+    "    lisat_socr.append(predi)\n",
+    "        \n",
+    "ny_lisat_so=[] \n",
     "\n",
+    "lisat_socr= np.array(lisat_socr)\n",
+    "lisat_socr=lisat_socr.transpose()\n",
+    "lisat_socr\n",
+    "\n",
+    "for x in lisat_socr:\n",
+    "    c=Counter(x)\n",
+    "    c.most_common()\n",
+    "    value, count = c.most_common()[0]  \n",
+    "    ny_lisat_so.append(value)    \n",
     "\n",
     "    \n",
-    "\n",
     "\n"
    ]
   },
@@ -769,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -814,8 +827,18 @@
      "output_type": "stream",
      "text": [
       "Test score från Randomforest 0.6855895196506551\n",
-      "Test score från egen Randomforest 0.5414847161572053\n"
+      "Test score från egen Randomforest 0.5720524017467249\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.5720524017467249"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -826,14 +849,16 @@
     "\n",
     "print(f'Test score från Randomforest {test}')\n",
     "\n",
-    "print(f'Test score från egen Randomforest {accuracy(y_test,predi)}') \n"
+    "print(f'Test score från egen Randomforest {accuracy(y_test,ny_lisat_so)}') \n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ja det skiljer sig mot modellen jag skapade i godkänt delen då fick jag som jag visar 0.68 och resultatet från egen modellen är 0.54 så det skiljer sig.\n",
+    "Ja det skiljer sig mot modellen jag skapade i godkänt delen då fick jag som jag visar 0.68 och resultatet från egen modellen är 0.57 så det skiljer sig.\n",
     "\n",
     "Varför? det beror på oss hur vi tänker när vi väljer hur många decision trees vår modell ska träna på, dvs om vi väljer att träna vår modell randomforest på (x) antal träd så hög det antalet så högre test score vi får, så i det fallet antal decision trees som gör att resultatet att det skiljer sig."
    ]
@@ -848,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -881,7 +906,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nej det är inte samma klasser som förra modellen i godkänt delen dessa är annorlunda klasser."
+    "Nej det är inte samma klasser som förra modellen i godkänt delen dessa är annorlunda klasser, förra modellen fick vi 77,18,31,63 men i min egen modell fick jag 58,23,31,47,16,17 så klsserna blev annorlunda i egen randomforest."
    ]
   }
  ],
